Add show view template for users

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,12 @@
-<h1>Show Users</h1>
+<%= render @user %>
+
+<div class="bio">
+    <h2>Bio</h2>
+    <p><%=@user.bio%></p>
+</div>
+
+<%@post.each do |post|%>
+    <%= render post %>
+<%end%>
+
+<button><%= link_to ("See all posts"),user_posts_path(@user.id) %></button>
