--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<p><%= notice%></p>
 <button class="button">Back to user: <%= link_to @user.name, user_path(@user) %></button>
 
 <%= render @user %>
