Generate devise controller

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,5 @@
 <div class="sections">
-    <%= image_tag (user.photo), height: '115', width: '115' %>
+    <%# <%= image_tag (user.photo), height: '115', width: '115' %> %>
     <div class="users">
         <h1><%= link_to (user.name), user%></h1>
         <span>Number of posts: <%=user.posts_counter%></span>
