--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -78,3 +78,25 @@ button {
   border: 1px solid #bebdbd;
   margin-left: 1rem;
 }
+
+.black-border {
+  border: 2px solid black;
+  border-radius: 5px;
+  padding: 1rem;
+}
+
+.sign-up {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 60vw;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.sign-title {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
