--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,23 @@
+
+<div class="navbar black-border">
+    <div class="inner-cont">
+        <% if user_signed_in? %>
+            <h2 class="nav-title">Current User: <%= @current.name %></h2>
+        <% end %>
+    </div>
+
+    <div class="inner-cont">
+        <% if user_signed_in? %>
+            <%= link_to "Sign out", '/sign_out', :method => :delete, class: 'nav-btn' %> 
+        <% else %>
+            <%= link_to "Login", new_user_session_path, :method => :get, class: 'nav-btn' %> 
+            <%= link_to "Sign Up", new_user_registration_path, :method => :get, class: 'nav-btn' %> 
+        <% end %>
+    </div>
+</div>
+
 <% @user.each do |user| %>
     <%= render user %>
 <%end%>
-<%= link_to "Sign out", destroy_user_session_path, :method => :delete %> 
+
+
