--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="black-border sign-up">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { "data-turbo": "false"  }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
     
       <div class="field">
