--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Change your password</h2>
+<h2 class="title-w80 sign-title">Change your password</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, "data-turbo": "false"  }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -18,8 +18,10 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Change my password" %>
+    <%= f.submit "Change my password", class: 'w-100' %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="bottom-links">
+  <%= render "devise/shared/links", class: 'w-100' %>
+</div>
